# routes/client.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\V1\Client\LikeController;
 use App\Http\Controllers\Api\V1\Client\MasterDataController;
+use App\Http\Controllers\Api\V1\Client\Review\ProductReviewController;
 use Illuminate\Support\Facades\Route;
 
 Route::controller(MasterDataController::class)->group(function(){
@@ -18,3 +19,4 @@ Route::middleware(['auth:sanctum'])->group(function() {
         Route::get('favourite/{package:slug}/package', 'togglePackageFavourite');
     });
 });
+Route::apiResource('product.review',ProductReviewController::class)->except(['show'])->scoped(['product' => 'slug', 'review' => 'uuid']);
